13.jcn2,3
	- mutopia/J.S.Bach/Petites-Preludes: bf's and mutopia preraration
	- separate documentation package

13.hwn2
	- mutopia: scs2, horn-concerto-3
	- junked Line_spacer baseclass.
	- removed gourlay complications
	- use force iso. energy for minimisation. Add uniformity term
to demerits.

13.jcn1
	- bf: mudela-book

*******
12.jcn1
	- auto-knees, input/test/auto-knee.ly

pl 12.rrr2
	- voltaSpannerDuration may be a rational
	- .ly files corrected, Voice.dynamicDir to Voice.dynamicDirection

pl 12.rrr1
 	- key (K:) with clef, bug fix for abc2ly
 	- voltaSpannerDuration code added to lilypond

pl 12.hwn1
	- junked wordwrap
	- bf: use position (not pitch) for autochange
	- mudela-book fixes: --dependencies, --dep-prefix
	- mudela.tely more updates.  Now absorbed LilyPond manpage. 
	- BUGS now in INSTALL.texi

*******
pl 11.uu1
	- changed debug init code.

pl 11.jcn2
	- bf: LDFLAGS=foo CFLAGS=bar ./configure
	- bf: configure (--disable-printing = default) -DNPRINT
	- bf: mf-to-xpms / make -C mf xpms; feta-accordion is broken,
	  see mf/README

pl 11.jcn1
	- gnossiene with new \autochange

pl 11.jbr1
        - Tried to get rid of path and switch dependencies in mf
          build process.

pl 11.hwn1
	- doco reorganisation: folded glossary and tutorial into manual.
	- move mudela-book-doc to texinfo
	- feta.tex to mf/
	- release.py, package-diff.py now dump into out/


****
pl 10.hwn1
	- Auto_change_music, Auto_change_iterator: auto staff
switching. 2nd try.  See input/test/auto-change.ly

pl 10.uu1
	- doc restructure: hacking.texi
	- make & install .pfas
	- updates: faq.texi
	- rpm fixes.
	- Windows fixes (9.jbr)

******
pl 9.rrr1
	- abc2ly bug fixes and extensions
	- volta spanner given height to avoid collisions

pl 9.jcn2
	- 2.95 fixes
	- input/test/different-time-signatures.ly (wasn't this in refman?)

pl 9.hwn1
	- fixes for mi2mu
	- bf: staff-side with empty parent.
	- bf:
Hara_kiri_vertical_group_spanner::do_substitute_element_pointer has to